--- a/config/Snakefile_local.yaml
+++ b/config/Snakefile_local.yaml
@@ -3,8 +3,9 @@
 # or --configfile options.
 ---
 s3_staging_url: s3://nextstrain-staging
-slack_webhook: ~
+slack_token: ~
+slack_channel: "#ncov-gisaid-updates"
 sequences: "data/sequences.fasta"
 metadata: "data/metadata.tsv"
-local_sequences: "<path to your loacl sequences.fasta>"
-local_gisaid_metadata: "<path to your local metadata tsv in gisaid format>"
+local_sequences: <path to your loacl sequences.fasta>
+local_gisaid_metadata: <path to your local metadata tsv in gisaid format>
